fix: corrections gramaticales multiples